--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "celery>=5.3.0",
   "redis>=5.0.0",
   "inject>=5.2.0",
+  "mpmath>=1.3.0",
 ]
 
 [project.optional-dependencies]
