lint and type check

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,8 @@ log-level = "info"
 line-length = 100
 target-version = "py311"
 select = ["E", "F", "I", "B", "UP"]
-ignore = ["E501"]
-exclude = ["build", "dist", ".venv", "venv", "env", "__pycache__"]
+lint.ignore = ["E501"]
+lint.exclude = ["build", "dist", ".venv", "venv", "env", "__pycache__"]
 
 [tool.mypy]
 python_version = "3.11"
