--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   redis:
     image: redis:7-alpine
@@ -27,6 +25,8 @@ services:
       uvicorn src.app.presentation.main:app
       --host 0.0.0.0 --port 8000
     restart: unless-stopped
+    volumes:
+      - .:/app
     networks: [posttager_net]
 
   db:
@@ -35,6 +35,7 @@ services:
       - .env
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks: [posttager_net]
 
   worker:
     build:
@@ -49,8 +50,13 @@ services:
       celery -A src.app.infrastructure.celery.app:celery_app
       worker -l ${LOG_LEVEL:-INFO} --concurrency=1
     restart: unless-stopped
+    volumes:
+      - .:/app
     networks: [posttager_net]
 
 networks:
   posttager_net:
     driver: bridge
+
+volumes:
+  pgdata:
