--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "mpmath>=1.3.0",
   "sqlalchemy>=2.0.0",
   "asyncpg>=0.29.0",
+  "alembic>=1.13.0",
 ]
 
 [project.optional-dependencies]
@@ -24,6 +25,7 @@ test = [
   "httpx>=0.27.0",
   "pytest>=8.4.2",
   "pytest-asyncio>=0.23.8",
+  "aiosqlite>=0.20.0",
 ]
 dev = [
   "ruff>=0.6.8",
