--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     depends_on:
       redis:
         condition: service_healthy
+      db:
+        condition: service_healthy
     ports:
       - "8000:8000"
     command: >
@@ -34,6 +36,11 @@ services:
     image: postgres:16
     env_file:
       - .env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks: [posttager_net]
@@ -46,6 +53,8 @@ services:
     env_file: .env
     depends_on:
       redis:
+        condition: service_healthy
+      db:
         condition: service_healthy
     command: >
       python -m src.app.worker.main
